Added MAVEN_OPTS in contributing instructions